Updated Pom.xml and Jenkinsfile