@@ -11,12 +11,6 @@ pipeline {
         // Deze command is nodig omdat UMLet een verouderde API voor het aanmaken van folders gebruikt.
         // Het is teveel werk om te controleren waar deze API aangeroepen wordt,
         // door middel van deze manier kan dit probleem omgezeild worden.
-        sh 'export MAVEN_OPTS="-Djava.awt.headless=true"'
-        sh 'export JENKINS_JAVA_OPTIONS="-Xmx2048m -XX:MaxPermSize=512m -Djava.awt.headless=true"'
-
-        // Deze command is nodig omdat UMLet een verouderde API voor het aanmaken van folders gebruikt.
-        // Het is teveel werk om te controleren waar deze API aangeroepen wordt,
-        // door middel van deze manier kan dit probleem omgezeild worden.
         sh 'mkdir -p /root/.config/UMLet'
       }
     }
